--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "aegis-auth",
 	"description": "Angular authentication libraries",
-	"version": "14.0.0",
+	"version": "15.0.0",
 	"license": "MIT",
 	"author": {
 		"email": "alexaegis@gmail.com",
@@ -92,80 +92,80 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "^14.2.4",
-		"@angular/cdk": "^14.2.3",
-		"@angular/common": "^14.2.4",
-		"@angular/compiler": "^14.2.4",
-		"@angular/core": "^14.2.4",
-		"@angular/forms": "^14.2.4",
-		"@angular/material": "^14.2.3",
-		"@angular/platform-browser": "^14.2.4",
-		"@angular/platform-browser-dynamic": "^14.2.4",
-		"@angular/router": "^14.2.4",
-		"@fortawesome/angular-fontawesome": "^0.11.1",
-		"@fortawesome/fontawesome-svg-core": "^6.2.0",
-		"@fortawesome/free-brands-svg-icons": "^6.2.0",
-		"@fortawesome/free-solid-svg-icons": "^6.2.0",
-		"@nrwl/angular": "14.8.2",
-		"core-js": "~3.25.5",
-		"js-base64": "^3.7.2",
+		"@angular/animations": "15.0.2",
+		"@angular/cdk": "15.0.1",
+		"@angular/common": "15.0.2",
+		"@angular/compiler": "15.0.2",
+		"@angular/core": "15.0.2",
+		"@angular/forms": "15.0.2",
+		"@angular/material": "15.0.1",
+		"@angular/platform-browser": "15.0.2",
+		"@angular/platform-browser-dynamic": "15.0.2",
+		"@angular/router": "15.0.2",
+		"@fortawesome/angular-fontawesome": "^0.12.0",
+		"@fortawesome/fontawesome-svg-core": "^6.2.1",
+		"@fortawesome/free-brands-svg-icons": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1",
+		"@nrwl/angular": "15.2.4",
+		"core-js": "~3.26.1",
+		"js-base64": "^3.7.3",
 		"rxjs": "~7.5.7",
-		"tslib": "^2.4.0",
-		"zone.js": "0.11.8"
+		"tslib": "^2.4.1",
+		"zone.js": "0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^14.2.4",
-		"@angular-eslint/builder": "^14.1.2",
-		"@angular-eslint/eslint-plugin": "^14.1.2",
-		"@angular-eslint/eslint-plugin-template": "^14.1.2",
-		"@angular-eslint/schematics": "^14.1.2",
-		"@angular-eslint/template-parser": "^14.1.2",
-		"@angular/cli": "~14.2.4",
-		"@angular/compiler-cli": "14.2.4",
-		"@angular/language-service": "14.2.4",
-		"@commitlint/cli": "~17.1.2",
-		"@commitlint/config-conventional": "~17.1.0",
-		"@nrwl/cypress": "14.8.2",
-		"@nrwl/eslint-plugin-nx": "14.8.2",
-		"@nrwl/jest": "14.8.2",
-		"@nrwl/linter": "14.8.2",
-		"@nrwl/node": "14.8.2",
-		"@nrwl/web": "14.8.2",
-		"@nrwl/workspace": "14.8.2",
-		"@types/jest": "29.1.1",
+		"@angular-devkit/build-angular": "15.0.2",
+		"@angular-eslint/builder": "^15.1.0",
+		"@angular-eslint/eslint-plugin": "^15.1.0",
+		"@angular-eslint/eslint-plugin-template": "^15.1.0",
+		"@angular-eslint/schematics": "^15.1.0",
+		"@angular-eslint/template-parser": "^15.1.0",
+		"@angular/cli": "~15.0.2",
+		"@angular/compiler-cli": "15.0.2",
+		"@angular/language-service": "15.0.2",
+		"@commitlint/cli": "~17.3.0",
+		"@commitlint/config-conventional": "~17.3.0",
+		"@nrwl/cypress": "15.2.4",
+		"@nrwl/eslint-plugin-nx": "15.2.4",
+		"@nrwl/jest": "15.2.4",
+		"@nrwl/linter": "15.2.4",
+		"@nrwl/node": "15.2.4",
+		"@nrwl/web": "15.2.4",
+		"@nrwl/workspace": "15.2.4",
+		"@types/jest": "29.2.3",
 		"@types/js-base64": "~3.3.1",
-		"@types/node": "18.8.1",
-		"@typescript-eslint/eslint-plugin": "5.39.0",
-		"@typescript-eslint/parser": "5.39.0",
+		"@types/node": "18.11.10",
+		"@typescript-eslint/eslint-plugin": "5.45.0",
+		"@typescript-eslint/parser": "5.45.0",
 		"compression-webpack-plugin": "^10.0.0",
 		"cpy-cli": "^4.2.0",
-		"cypress": "^10.9.0",
+		"cypress": "^11.2.0",
 		"dotenv": "16.0.3",
-		"eslint": "8.24.0",
+		"eslint": "8.28.0",
 		"eslint-config-prettier": "~8.5.0",
 		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "^39.3.6",
+		"eslint-plugin-jsdoc": "^39.6.4",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-prettier": "~4.2.1",
 		"eslint-plugin-react": "latest",
-		"husky": "^8.0.1",
-		"jest": "28.1.3",
-		"jest-environment-jsdom": "28.1.1",
-		"jest-preset-angular": "12.2.2",
-		"lint-staged": "~13.0.3",
+		"husky": "^8.0.2",
+		"jest": "29.3.1",
+		"jest-environment-jsdom": "29.3.1",
+		"jest-preset-angular": "12.2.3",
+		"lint-staged": "~13.0.4",
 		"markdownlint": "^0.26.2",
 		"markdownlint-cli": "^0.32.2",
-		"ng-packagr": "14.2.1",
-		"npm-check-updates": "~16.3.8",
-		"nx": "14.8.2",
+		"ng-packagr": "15.0.1",
+		"npm-check-updates": "~16.4.3",
+		"nx": "15.2.4",
 		"pinst": "^3.0.0",
-		"postcss": "^8.4.17",
+		"postcss": "^8.4.19",
 		"postcss-import": "15.0.0",
-		"postcss-preset-env": "7.8.2",
-		"postcss-scss": "^4.0.5",
+		"postcss-preset-env": "7.8.3",
+		"postcss-scss": "^4.0.6",
 		"postcss-url": "10.1.3",
-		"prettier": "2.7.1",
+		"prettier": "2.8.0",
 		"remark": "~14.0.2",
 		"remark-cli": "~11.0.0",
 		"remark-lint": "~9.1.1",
@@ -173,18 +173,18 @@
 		"remark-preset-lint-consistent": "~5.1.1",
 		"remark-preset-lint-recommended": "~6.1.2",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.79.1",
-		"rollup-plugin-gzip": "~3.0.1",
+		"rollup": "~3.5.1",
+		"rollup-plugin-gzip": "~3.1.0",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.5.0",
-		"stylelint": "~14.13.0",
-		"stylelint-config-prettier": "~9.0.3",
+		"stylelint": "~14.15.0",
+		"stylelint-config-prettier": "~9.0.4",
 		"stylelint-prettier": "~2.0.0",
-		"ts-jest": "28.0.8",
+		"ts-jest": "29.0.3",
 		"ts-node": "10.9.1",
-		"typedoc": "~0.23.15",
+		"typedoc": "~0.23.21",
 		"typescript": "4.8.4",
-		"webpack-bundle-analyzer": "~4.6.1",
+		"webpack-bundle-analyzer": "~4.7.0",
 		"yaml-lint": "^1.7.0"
 	}
 }
