--- a/package.json
+++ b/package.json
@@ -92,21 +92,21 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "15.0.2",
-		"@angular/cdk": "15.0.1",
-		"@angular/common": "15.0.2",
-		"@angular/compiler": "15.0.2",
-		"@angular/core": "15.0.2",
-		"@angular/forms": "15.0.2",
-		"@angular/material": "15.0.1",
-		"@angular/platform-browser": "15.0.2",
-		"@angular/platform-browser-dynamic": "15.0.2",
-		"@angular/router": "15.0.2",
+		"@angular/animations": "15.1.5",
+		"@angular/cdk": "15.1.6",
+		"@angular/common": "15.1.5",
+		"@angular/compiler": "15.1.5",
+		"@angular/core": "15.1.5",
+		"@angular/forms": "15.1.5",
+		"@angular/material": "15.1.6",
+		"@angular/platform-browser": "15.1.5",
+		"@angular/platform-browser-dynamic": "15.1.5",
+		"@angular/router": "15.1.5",
 		"@fortawesome/angular-fontawesome": "^0.12.0",
 		"@fortawesome/fontawesome-svg-core": "^6.2.1",
 		"@fortawesome/free-brands-svg-icons": "^6.2.1",
 		"@fortawesome/free-solid-svg-icons": "^6.2.1",
-		"@nrwl/angular": "15.2.4",
+		"@nrwl/angular": "15.7.2",
 		"core-js": "~3.26.1",
 		"js-base64": "^3.7.3",
 		"rxjs": "~7.5.7",
@@ -114,24 +114,28 @@
 		"zone.js": "0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "15.0.2",
+		"@angular-devkit/build-angular": "15.1.6",
+		"@angular-devkit/core": "~15.1.0",
+		"@angular-devkit/schematics": "~15.1.0",
 		"@angular-eslint/builder": "^15.1.0",
 		"@angular-eslint/eslint-plugin": "^15.1.0",
 		"@angular-eslint/eslint-plugin-template": "^15.1.0",
 		"@angular-eslint/schematics": "^15.1.0",
 		"@angular-eslint/template-parser": "^15.1.0",
-		"@angular/cli": "~15.0.2",
-		"@angular/compiler-cli": "15.0.2",
-		"@angular/language-service": "15.0.2",
+		"@angular/cli": "~15.1.0",
+		"@angular/compiler-cli": "15.1.5",
+		"@angular/language-service": "15.1.5",
 		"@commitlint/cli": "~17.3.0",
 		"@commitlint/config-conventional": "~17.3.0",
-		"@nrwl/cypress": "15.2.4",
-		"@nrwl/eslint-plugin-nx": "15.2.4",
-		"@nrwl/jest": "15.2.4",
-		"@nrwl/linter": "15.2.4",
-		"@nrwl/node": "15.2.4",
-		"@nrwl/web": "15.2.4",
-		"@nrwl/workspace": "15.2.4",
+		"@nrwl/cypress": "15.7.2",
+		"@nrwl/eslint-plugin-nx": "15.7.2",
+		"@nrwl/jest": "15.7.2",
+		"@nrwl/js": "15.7.2",
+		"@nrwl/linter": "15.7.2",
+		"@nrwl/node": "15.7.2",
+		"@nrwl/web": "15.7.2",
+		"@nrwl/workspace": "15.7.2",
+		"@schematics/angular": "~15.1.0",
 		"@types/jest": "29.2.3",
 		"@types/js-base64": "~3.3.1",
 		"@types/node": "18.11.10",
@@ -139,7 +143,7 @@
 		"@typescript-eslint/parser": "5.45.0",
 		"compression-webpack-plugin": "^10.0.0",
 		"cpy-cli": "^4.2.0",
-		"cypress": "^11.2.0",
+		"cypress": "^12.2.0",
 		"dotenv": "16.0.3",
 		"eslint": "8.28.0",
 		"eslint-config-prettier": "~8.5.0",
@@ -156,9 +160,9 @@
 		"lint-staged": "~13.0.4",
 		"markdownlint": "^0.26.2",
 		"markdownlint-cli": "^0.32.2",
-		"ng-packagr": "15.0.1",
+		"ng-packagr": "15.1.2",
 		"npm-check-updates": "~16.4.3",
-		"nx": "15.2.4",
+		"nx": "15.7.2",
 		"pinst": "^3.0.0",
 		"postcss": "^8.4.19",
 		"postcss-import": "15.0.0",
