--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
 		"update": "nx migrate latest",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "husky install && node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main --first-only --create-ivy-entry-points",
+		"postinstall": "husky install && ngcc --properties es2020 browser module main --first-only --create-ivy-entry-points",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
@@ -92,41 +92,41 @@
 		"workspace-generator": "nx workspace-generator"
 	},
 	"dependencies": {
-		"@angular/animations": "15.1.5",
-		"@angular/cdk": "15.1.6",
-		"@angular/common": "15.1.5",
-		"@angular/compiler": "15.1.5",
-		"@angular/core": "15.1.5",
-		"@angular/forms": "15.1.5",
-		"@angular/material": "15.1.6",
-		"@angular/platform-browser": "15.1.5",
-		"@angular/platform-browser-dynamic": "15.1.5",
-		"@angular/router": "15.1.5",
-		"@fortawesome/angular-fontawesome": "^0.12.0",
-		"@fortawesome/fontawesome-svg-core": "^6.2.1",
-		"@fortawesome/free-brands-svg-icons": "^6.2.1",
-		"@fortawesome/free-solid-svg-icons": "^6.2.1",
+		"@angular/animations": "15.2.0",
+		"@angular/cdk": "15.2.0",
+		"@angular/common": "15.2.0",
+		"@angular/compiler": "15.2.0",
+		"@angular/core": "15.2.0",
+		"@angular/forms": "15.2.0",
+		"@angular/material": "15.2.0",
+		"@angular/platform-browser": "15.2.0",
+		"@angular/platform-browser-dynamic": "15.2.0",
+		"@angular/router": "15.2.0",
+		"@fortawesome/angular-fontawesome": "^0.12.1",
+		"@fortawesome/fontawesome-svg-core": "^6.3.0",
+		"@fortawesome/free-brands-svg-icons": "^6.3.0",
+		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@nrwl/angular": "15.7.2",
-		"core-js": "~3.26.1",
-		"js-base64": "^3.7.3",
-		"rxjs": "~7.5.7",
-		"tslib": "^2.4.1",
+		"core-js": "~3.28.0",
+		"js-base64": "^3.7.5",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.5.0",
 		"zone.js": "0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "15.1.6",
-		"@angular-devkit/core": "~15.1.0",
-		"@angular-devkit/schematics": "~15.1.0",
-		"@angular-eslint/builder": "^15.1.0",
-		"@angular-eslint/eslint-plugin": "^15.1.0",
-		"@angular-eslint/eslint-plugin-template": "^15.1.0",
-		"@angular-eslint/schematics": "^15.1.0",
-		"@angular-eslint/template-parser": "^15.1.0",
-		"@angular/cli": "~15.1.0",
-		"@angular/compiler-cli": "15.1.5",
-		"@angular/language-service": "15.1.5",
-		"@commitlint/cli": "~17.3.0",
-		"@commitlint/config-conventional": "~17.3.0",
+		"@angular-devkit/build-angular": "15.2.0",
+		"@angular-devkit/core": "~15.2.0",
+		"@angular-devkit/schematics": "~15.2.0",
+		"@angular-eslint/builder": "^15.2.1",
+		"@angular-eslint/eslint-plugin": "^15.2.1",
+		"@angular-eslint/eslint-plugin-template": "^15.2.1",
+		"@angular-eslint/schematics": "^15.2.1",
+		"@angular-eslint/template-parser": "^15.2.1",
+		"@angular/cli": "~15.2.0",
+		"@angular/compiler-cli": "15.2.0",
+		"@angular/language-service": "15.2.0",
+		"@commitlint/cli": "~17.4.4",
+		"@commitlint/config-conventional": "~17.4.4",
 		"@nrwl/cypress": "15.7.2",
 		"@nrwl/eslint-plugin-nx": "15.7.2",
 		"@nrwl/jest": "15.7.2",
@@ -135,60 +135,60 @@
 		"@nrwl/node": "15.7.2",
 		"@nrwl/web": "15.7.2",
 		"@nrwl/workspace": "15.7.2",
-		"@schematics/angular": "~15.1.0",
-		"@types/jest": "29.2.3",
+		"@schematics/angular": "~15.2.0",
+		"@types/jest": "29.4.0",
 		"@types/js-base64": "~3.3.1",
-		"@types/node": "18.11.10",
-		"@typescript-eslint/eslint-plugin": "5.45.0",
-		"@typescript-eslint/parser": "5.45.0",
+		"@types/node": "18.14.1",
+		"@typescript-eslint/eslint-plugin": "5.53.0",
+		"@typescript-eslint/parser": "5.53.0",
 		"compression-webpack-plugin": "^10.0.0",
 		"cpy-cli": "^4.2.0",
-		"cypress": "^12.2.0",
+		"cypress": "^12.7.0",
 		"dotenv": "16.0.3",
-		"eslint": "8.28.0",
-		"eslint-config-prettier": "~8.5.0",
+		"eslint": "8.35.0",
+		"eslint-config-prettier": "~8.6.0",
 		"eslint-plugin-cypress": "^2.12.1",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "^39.6.4",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsdoc": "^40.0.0",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-prettier": "~4.2.1",
 		"eslint-plugin-react": "latest",
-		"husky": "^8.0.2",
-		"jest": "29.3.1",
-		"jest-environment-jsdom": "29.3.1",
-		"jest-preset-angular": "12.2.3",
-		"lint-staged": "~13.0.4",
-		"markdownlint": "^0.26.2",
-		"markdownlint-cli": "^0.32.2",
-		"ng-packagr": "15.1.2",
-		"npm-check-updates": "~16.4.3",
+		"husky": "^8.0.3",
+		"jest": "29.4.3",
+		"jest-environment-jsdom": "29.4.3",
+		"jest-preset-angular": "13.0.0",
+		"lint-staged": "~13.1.2",
+		"markdownlint": "^0.27.0",
+		"markdownlint-cli": "^0.33.0",
+		"ng-packagr": "15.2.2",
+		"npm-check-updates": "~16.7.9",
 		"nx": "15.7.2",
 		"pinst": "^3.0.0",
-		"postcss": "^8.4.19",
-		"postcss-import": "15.0.0",
-		"postcss-preset-env": "7.8.3",
+		"postcss": "^8.4.21",
+		"postcss-import": "15.1.0",
+		"postcss-preset-env": "8.0.1",
 		"postcss-scss": "^4.0.6",
 		"postcss-url": "10.1.3",
-		"prettier": "2.8.0",
+		"prettier": "2.8.4",
 		"remark": "~14.0.2",
 		"remark-cli": "~11.0.0",
 		"remark-lint": "~9.1.1",
 		"remark-lint-maximum-line-length": "~3.1.2",
 		"remark-preset-lint-consistent": "~5.1.1",
 		"remark-preset-lint-recommended": "~6.1.2",
-		"rimraf": "~3.0.2",
-		"rollup": "~3.5.1",
+		"rimraf": "~4.1.2",
+		"rollup": "~3.17.3",
 		"rollup-plugin-gzip": "~3.1.0",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.5.0",
-		"stylelint": "~14.15.0",
-		"stylelint-config-prettier": "~9.0.4",
-		"stylelint-prettier": "~2.0.0",
-		"ts-jest": "29.0.3",
+		"stylelint": "~15.2.0",
+		"stylelint-config-prettier": "~9.0.5",
+		"stylelint-prettier": "~3.0.0",
+		"ts-jest": "29.0.5",
 		"ts-node": "10.9.1",
-		"typedoc": "~0.23.21",
+		"typedoc": "~0.23.25",
 		"typescript": "4.8.4",
-		"webpack-bundle-analyzer": "~4.7.0",
+		"webpack-bundle-analyzer": "~4.8.0",
 		"yaml-lint": "^1.7.0"
 	}
 }
